# PythonVulnerableDependedencies

./: CI_Workflow.yml  Makefile  README.md  dependency_requirements.txt  pre_commit_config.yml  pyproject.toml  qodana.yaml  redirect_server.py  requirements.txt  run_qodana.sh  vulnerable_sample.py
